--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculadora Interativa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
+    <link rel="shortcut icon" href="bobão.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -38,4 +39,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
