--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Interativa</title>
+    <title>Calculadora</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
     <link rel="shortcut icon" href="bobão.ico" type="image/x-icon">
@@ -41,3 +41,4 @@
 </body>
 
 </html>
+
